OCR-2368 | NIFI-14554 Changes for branch specific java compatibility